--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon server.js",
-    "buildW": "webpack server.js dist/bundle.js"
+    "build": "webpack server.js dist/bundle.js"
   },
   "author": "",
   "license": "ISC",
