--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 ACCESS_TOKENSECRET = test
-MONGO_URI=mongodb://localhost:27017/ComplaintSystem
+MONGO_URI=mongodb+srv://avnig1905:MongoDbAvni@complaintfix.iqvxpa3.mongodb.net/?retryWrites=true&w=majority&appName=ComplaintFix
 PORT=5000
